# axum_ex

./: .env  Cargo.toml  readme.md
src/: main.rs  mysq.rs
